--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
+    "next-theme": "^0.1.5",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
