--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "faker": "^6.6.6",
     "next": "13.4.16",
     "next-theme": "^0.1.5",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
