fix(WeatherService) : update env url  and create zodiacService

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BACKEND_URL=https://lobster-app-kps4x.ondigitalocean.app/api/horoskopi/
+NEXT_PUBLIC_BACKEND_URL=https://lobster-app-kps4x.ondigitalocean.app/api/
