--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_URL=https://lobster-app-kps4x.ondigitalocean.app/api/
+NEXT_PUBLIC_BACKEND_URL=https://pinder.srulad1.com/api/
 
